<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EndGameActivity">

    <ImageView
        android:id="@+id/imgViewBackground"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:alpha="0.6"
        android:contentDescription="@string/content_desc"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/newyear_clockbackground" />

    <LinearLayout
        android:id="@+id/egLinearLayout"
        android:layout_width="348dp"
        android:layout_height="102dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449">

        <TextView
            android:id="@+id/egTextView"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingLeft="6dp"
            android:paddingRight="1dp"
            android:paddingTop="5dp"
            android:text="@string/eg_text"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>


    <Button
        android:id="@+id/egSeeResultsBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="130dp"
        android:layout_height="76dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/results"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="seeResults"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/egLinearLayout"
        app:layout_constraintVertical_bias="0.771" />


</android.support.constraint.ConstraintLayout>